[package]
name = "txt_to_md"
version = "0.1.1"
edition = "2021"
description = "Command converting from a txt file to a markdown file"
keywords = ["markdown", "text"]
authors = ["scepter914 <scepter914@gmail.com>"]
repository = "https://github.com/scepter914/txt-to-md-rs"
license = "MIT"
readme = "README.md"

[dependencies]
carrot_utils = "0.1.3"
log = "0.4"
serde_derive = "1.0"
serde = "1.0"
clap = { version = "4.4", features = ["derive"] }
