[package]
name = "txt_to_md"
version = "0.2.0"
edition = "2021"
description = "Command converting from a txt file to a markdown file"
keywords = ["markdown", "text"]
authors = ["scepter914 <scepter914@gmail.com>"]
repository = "https://github.com/scepter914/txt-to-md-rs"
license = "MIT"
readme = "README.md"

[dependencies]
log = "0.4.27"
clap = { version = "4.5.43", features = ["derive"] }
serde_derive = "1.0.219"
serde = "1.0.219"
env_logger = "0.11.8"
